// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringControl renders StringControl unchanged 1`] = `
<div>
  <div
    class="sc-2f9d5146-0 kysoaZ"
  >
    <div
      class="sc-dccedff6-0 kaZwEr"
      disabled=""
    >
      <input
        disabled=""
        placeholder=" "
        type="text"
        value="derp"
      />
      <label
        class="sc-ffdb2e6c-0 dXVxRc"
      >
        String test
      </label>
      <div
        class="sc-1d011157-0 gisjpe sc-5f903e4e-0 fvVMpv"
        color="night"
      />
    </div>
    <div
      class="sc-93ba83c0-0 bAVzHI"
    />
  </div>
</div>
`;

exports[`StringControl renders StringControl:Phone unchanged 1`] = `
<div>
  <div
    class="sc-2f9d5146-0 bVdSQY"
  >
    <div
      class="sc-dccedff6-0 kaZwEr"
      disabled=""
    >
      <input
        disabled=""
        placeholder=" "
        type="text"
        value=""
      />
      <label
        class="sc-ffdb2e6c-0 dXVxRc"
      >
        String test
      </label>
      <div
        class="sc-1d011157-0 gisjpe sc-5f903e4e-0 fvVMpv"
        color="night"
      />
    </div>
    <div
      class="sc-93ba83c0-0 bAVzHI"
    />
  </div>
</div>
`;
